Fixed welcome.php in dark mode

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -7,6 +7,10 @@
     background-color:  #333 !important;
   }
 
+  [data-theme="dark"] .text-always-dark{
+    color: #222 !important;
+  }
+
   [data-theme="dark"] a .user-social-name{
     color: #eee !important;
   }
